--- a/src/Squawkings.Tests/packages.config
+++ b/src/Squawkings.Tests/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AjaxMin" version="4.60.4609.17023" targetFramework="net40" />
+  <package id="Cassette" version="2.0.0" targetFramework="net40" />
+  <package id="Cassette.Aspnet" version="2.0.0" targetFramework="net40" />
+  <package id="Cassette.Views" version="2.0.0" targetFramework="net40" />
   <package id="NUnit" version="2.6.1" targetFramework="net40" />
 </packages>
