--- a/src/Squawkings.Tests/packages.config
+++ b/src/Squawkings.Tests/packages.config
@@ -3,6 +3,8 @@
   <package id="AjaxMin" version="4.60.4609.17023" targetFramework="net40" />
   <package id="Cassette" version="2.0.0" targetFramework="net40" />
   <package id="Cassette.Aspnet" version="2.0.0" targetFramework="net40" />
+  <package id="Cassette.Less" version="2.0.0" targetFramework="net40" />
   <package id="Cassette.Views" version="2.0.0" targetFramework="net40" />
+  <package id="DotlessClientOnly" version="1.3.1.0" targetFramework="net40" />
   <package id="NUnit" version="2.6.1" targetFramework="net40" />
 </packages>
