Logon Page HTML and CSS

--- a/src/Squawkings/Squawkings.csproj
+++ b/src/Squawkings/Squawkings.csproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <Compile Include="CassetteConfiguration.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LogonController.cs" />
     <Compile Include="Controllers\SquawkDispsViewModel.cs" />
     <Compile Include="Models\SquawkDisp.cs" />
     <Compile Include="Global.asax.cs">
@@ -91,6 +92,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\images\background.png" />
+    <Content Include="Content\images\header.png" />
     <Content Include="Content\images\placeholder-profile-img.jpg" />
     <Content Include="Content\images\placeholder-profile-img2.jpg" />
     <Content Include="Content\Reset.css" />
@@ -148,6 +150,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Logon\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
