Add basic logon page with basic authentication and error message display

--- a/src/Squawkings/Web.config
+++ b/src/Squawkings/Web.config
@@ -20,7 +20,7 @@
       </assemblies>
     </compilation>
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/LogOn" timeout="2880" />
+      <forms loginUrl="~/LogOn" timeout="2880" defaultUrl="~/home" />
     </authentication>
     <pages>
       <namespaces>
