--- a/src/Squawkings/packages.config
+++ b/src/Squawkings/packages.config
@@ -11,4 +11,5 @@
   <package id="jQuery.Validation" version="1.8.0" targetFramework="net40" />
   <package id="jQuery.vsdoc" version="1.5.1" targetFramework="net40" />
   <package id="Modernizr" version="1.7" targetFramework="net40" />
+  <package id="roundhouse" version="0.8.5.0" targetFramework="net40" />
 </packages>
