--- a/src/Squawkings/Web.config
+++ b/src/Squawkings/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
 <configuration>
+  <connectionStrings configSource ="connectionStrings.config">
+    
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
@@ -58,6 +61,14 @@
       <dependentAssembly>
         <assemblyIdentity name="dotless.ClientOnly" publicKeyToken="96b446c9e63eae34" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.3.1.0" newVersion="1.3.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MvcExtensions" publicKeyToken="ee6190c4449c24bc" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.5.1.0" newVersion="2.5.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="StructureMap" publicKeyToken="e60ad81abae3c223" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.6.4.0" newVersion="2.6.4.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
