--- a/src/Squawkings/packages.config
+++ b/src/Squawkings/packages.config
@@ -11,5 +11,9 @@
   <package id="jQuery.Validation" version="1.8.0" targetFramework="net40" />
   <package id="jQuery.vsdoc" version="1.5.1" targetFramework="net40" />
   <package id="Modernizr" version="1.7" targetFramework="net40" />
+  <package id="MvcExtensions" version="2.5.1" targetFramework="net40" />
+  <package id="MvcExtensions.StructureMap" version="2.5.0" targetFramework="net40" />
+  <package id="NPoco" version="1.0.3" targetFramework="net40" />
   <package id="roundhouse" version="0.8.5.0" targetFramework="net40" />
+  <package id="structuremap" version="2.6.4.1" targetFramework="net40" />
 </packages>
