--- a/src/Squawkings/Squawkings.csproj
+++ b/src/Squawkings/Squawkings.csproj
@@ -174,6 +174,7 @@
     <None Include="deploy.bat.templ" />
     <Content Include="Views\Global\Index.cshtml" />
     <Content Include="Views\Shared\_sqauwks.cshtml" />
+    <Content Include="Views\Profile\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
