Implement Schostack.web Html Helper and new Followers table

--- a/src/Squawkings/Views/Web.config
+++ b/src/Squawkings/Views/Web.config
@@ -11,10 +11,10 @@
     <pages pageBaseType="System.Web.Mvc.WebViewPage">
       <namespaces>
         <add namespace="System.Web.Mvc" />
-        <add namespace="System.Web.Mvc.Ajax" />
-        <add namespace="System.Web.Mvc.Html" />
-        <add namespace="System.Web.Routing" />
         <add namespace="Cassette.Views" />
+        <add namespace="SchoStack.Web.Html" />
+        <add namespace="SchoStack.Web.Html.Form" />
+        <add namespace="System.Web.Routing" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
