--- a/src/Squawkings/Web.config
+++ b/src/Squawkings/Web.config
@@ -4,9 +4,7 @@
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
 <configuration>
-  <connectionStrings configSource ="connectionStrings.config">
-    
-  </connectionStrings>
+  <connectionStrings configSource="connectionStrings.config"></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
@@ -30,7 +28,8 @@
         <add namespace="System.Web.Helpers" />
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
-        <add namespace="System.Web.Mvc.Html" />
+        <add namespace="SchoStack.Web.Html" />
+        <add namespace="SchoStack.Web.Html.Form" />        
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
         <add namespace="Cassette.Views" />
