--- a/src/Squawkings/Squawkings.csproj
+++ b/src/Squawkings/Squawkings.csproj
@@ -54,6 +54,12 @@
     <Reference Include="dotless.ClientOnly">
       <HintPath>..\packages\DotlessClientOnly.1.3.1.0\lib\dotless.ClientOnly.dll</HintPath>
     </Reference>
+    <Reference Include="FubuCore">
+      <HintPath>..\packages\FubuCore.0.9.9.149\lib\FubuCore.dll</HintPath>
+    </Reference>
+    <Reference Include="HtmlTags">
+      <HintPath>..\packages\HtmlTags.1.2.0.128\lib\4.0\HtmlTags.dll</HintPath>
+    </Reference>
     <Reference Include="MvcExtensions">
       <HintPath>..\packages\MvcExtensions.2.5.1\lib\net40\MvcExtensions.dll</HintPath>
     </Reference>
@@ -62,6 +68,9 @@
     </Reference>
     <Reference Include="NPoco">
       <HintPath>..\packages\NPoco.1.0.3\lib\net40\NPoco.dll</HintPath>
+    </Reference>
+    <Reference Include="SchoStack.Web">
+      <HintPath>..\packages\SchoStack.Web.0.6.2\lib\net40\SchoStack.Web.dll</HintPath>
     </Reference>
     <Reference Include="StructureMap">
       <HintPath>..\packages\structuremap.2.6.4.1\lib\net40\StructureMap.dll</HintPath>
@@ -171,7 +180,6 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Logon\Index.cshtml" />
-    <None Include="deploy.bat.templ" />
     <Content Include="Views\Global\Index.cshtml" />
     <Content Include="Views\Shared\_sqauwks.cshtml" />
     <Content Include="Views\Profile\Index.cshtml" />
