--- a/src/Squawkings/packages.config
+++ b/src/Squawkings/packages.config
@@ -6,6 +6,8 @@
   <package id="Cassette.Less" version="2.0.0" targetFramework="net40" />
   <package id="Cassette.Views" version="2.0.0" targetFramework="net40" />
   <package id="DotlessClientOnly" version="1.3.1.0" targetFramework="net40" />
+  <package id="FubuCore" version="0.9.9.149" targetFramework="net40" />
+  <package id="HtmlTags" version="1.2.0.128" targetFramework="net40" />
   <package id="jQuery" version="1.5.1" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.11" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.8.0" targetFramework="net40" />
@@ -15,5 +17,6 @@
   <package id="MvcExtensions.StructureMap" version="2.5.0" targetFramework="net40" />
   <package id="NPoco" version="1.0.3" targetFramework="net40" />
   <package id="roundhouse" version="0.8.5.0" targetFramework="net40" />
+  <package id="SchoStack.Web" version="0.6.2" targetFramework="net40" />
   <package id="structuremap" version="2.6.4.1" targetFramework="net40" />
 </packages>
