--- a/src/Squawkings/Squawkings.csproj
+++ b/src/Squawkings/Squawkings.csproj
@@ -69,8 +69,8 @@
     <Reference Include="NPoco">
       <HintPath>..\packages\NPoco.1.0.3\lib\net40\NPoco.dll</HintPath>
     </Reference>
-    <Reference Include="SchoStack.Web">
-      <HintPath>..\packages\SchoStack.Web.0.6.2\lib\net40\SchoStack.Web.dll</HintPath>
+    <Reference Include="SchoStack.Web, Version=0.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SchoStack.Web.0.6.3\lib\net40\SchoStack.Web.dll</HintPath>
     </Reference>
     <Reference Include="StructureMap">
       <HintPath>..\packages\structuremap.2.6.4.1\lib\net40\StructureMap.dll</HintPath>
@@ -106,15 +106,22 @@
     <Compile Include="Controllers\LogonController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Controllers\SquawkDispsViewModel.cs" />
-    <Compile Include="Models\ILogonDb.cs" />
+    <Compile Include="DateExtensions.cs" />
+    <Compile Include="Models\GlobalDb.cs" />
+    <Compile Include="Models\HomeDb.cs" />
     <Compile Include="Models\LogonDb.cs" />
     <Compile Include="Models\SquawkDisp.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\User.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Models\UserLogon.cs" />
     <Compile Include="Models\UserSecurityInfo.cs" />
+    <Compile Include="IdentityExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
