--- a/src/Squawkings.Tests/packages.config
+++ b/src/Squawkings.Tests/packages.config
@@ -6,5 +6,6 @@
   <package id="Cassette.Less" version="2.0.0" targetFramework="net40" />
   <package id="Cassette.Views" version="2.0.0" targetFramework="net40" />
   <package id="DotlessClientOnly" version="1.3.1.0" targetFramework="net40" />
+  <package id="GravatarHelper" version="3.2.0" targetFramework="net40" />
   <package id="NUnit" version="2.6.1" targetFramework="net40" />
 </packages>
