--- a/src/Squawkings/Squawkings.csproj
+++ b/src/Squawkings/Squawkings.csproj
@@ -57,6 +57,9 @@
     <Reference Include="FubuCore">
       <HintPath>..\packages\FubuCore.0.9.9.149\lib\FubuCore.dll</HintPath>
     </Reference>
+    <Reference Include="GravatarHelper">
+      <HintPath>..\packages\GravatarHelper.3.2.0\lib\Net40\GravatarHelper.dll</HintPath>
+    </Reference>
     <Reference Include="HtmlTags">
       <HintPath>..\packages\HtmlTags.1.2.0.128\lib\4.0\HtmlTags.dll</HintPath>
     </Reference>
@@ -104,9 +107,12 @@
     <Compile Include="Controllers\GlobalController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LogonController.cs" />
+    <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="DateExtensions.cs" />
+    <Compile Include="Controllers\FooterController.cs" />
     <Compile Include="Models\Follower.cs" />
+    <Compile Include="Models\FooterView.cs" />
     <Compile Include="Models\Squawk.cs" />
     <Compile Include="Models\SquawksDb.cs" />
     <Compile Include="Models\UserDisp.cs" />
@@ -125,6 +131,7 @@
     <Compile Include="IdentityExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensions.cs" />
+    <Compile Include="UploadFileConventions.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -195,6 +202,7 @@
     <Content Include="Views\Profile\Index.cshtml" />
     <Content Include="Views\Shared\_menu.cshtml" />
     <Content Include="Views\Shared\_profile.cshtml" />
+    <Content Include="Views\Shared\_footer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
