--- a/src/Squawkings/Views/Web.config
+++ b/src/Squawkings/Views/Web.config
@@ -15,6 +15,8 @@
         <add namespace="SchoStack.Web.Html" />
         <add namespace="SchoStack.Web.Html.Form" />
         <add namespace="System.Web.Routing" />
+        <add namespace="GravatarHelper" />
+        <add namespace="GravatarHelper.Extensions" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
