--- a/src/Squawkings/Web.config
+++ b/src/Squawkings/Web.config
@@ -31,6 +31,8 @@
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
         <add namespace="Cassette.Views" />
+        <add namespace="GravatarHelper" />
+        <add namespace="GravatarHelper.Extensions" />
       </namespaces>
     </pages>
     <httpModules>
