--- a/src/Squawkings/packages.config
+++ b/src/Squawkings/packages.config
@@ -7,6 +7,7 @@
   <package id="Cassette.Views" version="2.0.0" targetFramework="net40" />
   <package id="DotlessClientOnly" version="1.3.1.0" targetFramework="net40" />
   <package id="FubuCore" version="0.9.9.149" targetFramework="net40" />
+  <package id="GravatarHelper" version="3.2.0" targetFramework="net40" />
   <package id="HtmlTags" version="1.2.0.128" targetFramework="net40" />
   <package id="jQuery" version="1.5.1" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.11" targetFramework="net40" />
