--- a/src/Squawkings/Squawkings.csproj
+++ b/src/Squawkings/Squawkings.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Controllers\LogonController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
+    <Compile Include="Controllers\UploadFileController.cs" />
     <Compile Include="DateExtensions.cs" />
     <Compile Include="Controllers\FooterController.cs" />
     <Compile Include="Models\Follower.cs" />
@@ -203,6 +204,7 @@
     <Content Include="Views\Shared\_menu.cshtml" />
     <Content Include="Views\Shared\_profile.cshtml" />
     <Content Include="Views\Shared\_footer.cshtml" />
+    <Content Include="Views\UploadFile\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -210,7 +212,9 @@
   <ItemGroup>
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Content\dev_images\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
