--- a/src/Squawkings.Tests/packages.config
+++ b/src/Squawkings.Tests/packages.config
@@ -6,6 +6,11 @@
   <package id="Cassette.Less" version="2.0.0" targetFramework="net40" />
   <package id="Cassette.Views" version="2.0.0" targetFramework="net40" />
   <package id="DotlessClientOnly" version="1.3.1.0" targetFramework="net40" />
+  <package id="FubuCore" version="0.9.9.149" targetFramework="net40" />
   <package id="GravatarHelper" version="3.2.0" targetFramework="net40" />
+  <package id="HtmlTags" version="1.2.0.136" targetFramework="net40" />
+  <package id="NPoco" version="1.0.3" targetFramework="net40" />
   <package id="NUnit" version="2.6.1" targetFramework="net40" />
+  <package id="roundhouse" version="0.8.5.0" targetFramework="net40" />
+  <package id="SchoStack.Web" version="0.6.3" targetFramework="net40" />
 </packages>
