--- a/src/Squawkings.Tests/packages.config
+++ b/src/Squawkings.Tests/packages.config
@@ -9,8 +9,12 @@
   <package id="FubuCore" version="0.9.9.149" targetFramework="net40" />
   <package id="GravatarHelper" version="3.2.0" targetFramework="net40" />
   <package id="HtmlTags" version="1.2.0.136" targetFramework="net40" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="NPoco" version="1.0.3" targetFramework="net40" />
   <package id="NUnit" version="2.6.1" targetFramework="net40" />
   <package id="roundhouse" version="0.8.5.0" targetFramework="net40" />
   <package id="SchoStack.Web" version="0.6.3" targetFramework="net40" />
+  <package id="structuremap" version="2.6.4.1" targetFramework="net40" />
+  <package id="StructureMap.MVC3" version="1.0.8" targetFramework="net40" />
+  <package id="WebActivator" version="1.4.4" targetFramework="net40" />
 </packages>
