Complete Footer Rounded and Centered and not on Logon Page

--- a/src/Squawkings/Squawkings.csproj
+++ b/src/Squawkings/Squawkings.csproj
@@ -216,6 +216,7 @@
     <Content Include="Views\Shared\_profile.cshtml" />
     <Content Include="Views\Shared\_footer.cshtml" />
     <Content Include="Views\UploadFile\Index.cshtml" />
+    <Content Include="Views\Shared\_LayoutLogon.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
