Tidy up all pages, add Error message on squawk

--- a/src/Squawkings/Views/Web.config
+++ b/src/Squawkings/Views/Web.config
@@ -17,7 +17,8 @@
         <add namespace="System.Web.Routing" />
         <add namespace="GravatarHelper" />
         <add namespace="GravatarHelper.Extensions" />
-      </namespaces>
+  	    <add namespace="Squawkings" />
+	  </namespaces>
     </pages>
   </system.web.webPages.razor>
   <appSettings>
