--- a/src/Squawkings.Tests/Squawkings.Tests.csproj
+++ b/src/Squawkings.Tests/Squawkings.Tests.csproj
@@ -64,8 +64,9 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
-    <Reference Include="NPoco">
-      <HintPath>..\packages\NPoco.1.0.3\lib\net40\NPoco.dll</HintPath>
+    <Reference Include="NPoco, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\NPoco.1.0.4\lib\net40\NPoco.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=2.6.1.12217, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
