--- a/src/Squawkings/Squawkings.csproj
+++ b/src/Squawkings/Squawkings.csproj
@@ -73,8 +73,9 @@
     <Reference Include="MvcExtensions.StructureMap">
       <HintPath>..\packages\MvcExtensions.StructureMap.2.5.0\lib\net40\MvcExtensions.StructureMap.dll</HintPath>
     </Reference>
-    <Reference Include="NPoco">
-      <HintPath>..\packages\NPoco.1.0.3\lib\net40\NPoco.dll</HintPath>
+    <Reference Include="NPoco, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\NPoco.1.0.4\lib\net40\NPoco.dll</HintPath>
     </Reference>
     <Reference Include="SchoStack.Web, Version=0.6.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\SchoStack.Web.0.6.3\lib\net40\SchoStack.Web.dll</HintPath>
